# nanovg

./: CMakeLists.txt  NVGcontext.md  README.md  macro_cutter.py
_external/glad/include/glad/: glad.h
_external/glad/src/: glad.c
backends/: nanovg_gl_shader.cpp  nanovg_impl_opengl3.cpp  nanovg_impl_opengl3.h  renderer.cpp  renderer.h
example/: GlfwApp.cpp  GlfwApp.h  demo.cpp  demo.h  example_gl3.c  example_gl3.cpp  nanovg_gl_shader.cpp  nanovg_gl_shader.h  perf.c  perf.cpp  perf.h  renderer.cpp  renderer.h  texture_manager.cpp  texture_manager.h
src/: call.h  nanovg.cpp  nanovg.h  nanovg_drawdata.h  nanovg_gl.c  nanovg_gl.cpp  nanovg_gl.h  nanovg_gl_context.cpp  nanovg_gl_context.h  nanovg_gl_shader.cpp  nanovg_gl_shader.h  nanovg_gl_texture.cpp  nanovg_gl_texture.h  renderer.cpp  renderer.h
